# sparkling

./: .pre-commit-config.yaml  LICENSE  README.md  check_all.bat  check_hadoop.bat  check_java.bat  check_java_home.bat  check_path.bat  check_poetry.bat  check_python.bat  check_winutils.bat  pyproject.toml  verify_installation.bat
code/: conftest.py  importer.py  installed.py  pipeline.py  test_installed.py
resources/: file1.csv  file2.csv
