[project]
name = "sparkling"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandru Htc"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = ">=1.19.1,<2.0.0"
pyspark = "^3.5"
pre-commit = "^4.5.1"

[tool.mypy]
strict = true
exclude = [".venv"]
warn_unused_ignores = false

[mypy-requests]
ignore_missing_imports = true

[tool.pyright]
strict = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120
ignore-paths = [".venv"]