[project]
name = "sparkling"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandru Htc"}
]
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
isort = "^5.13.0"
pyspark = "^4.0.0"
pre-commit = "^4.5.1"
pytest = "^8.0.0"

[tool.poetry.group.lint.dependencies]
pylint = "^4.0.5"
pyrefly = "^0.58.0"

[tool.pyright]
strict = true

[tool.pylint.format]
max-line-length = 120

[tool.pylint.main]
ignore-paths = ['.venv']
source-roots = ['code']

[tool.pyrefly]
search-path = ['code']
